# utmo

./: .gitignore  LICENSE  README.md  alembic.ini  build.py  pyproject.toml  requirements.txt
music_organizer/: const.py  dataclasses.py  enums.py  extractor.py  main.py  models.py  scrapper.py
music_organizer/extractors/: __init__.py  abc.py  extractors.py
music_organizer/scrappers/: __init__.py  abc.py  scrappers.py
sketches/: bandcamp-simple.py
utmo/: __init__.py  adapters.py  cli.py  config.py  dataclasses.py  dynamic_storage.py  exceptions.py  models.py  structures.py  tools.py
utmo/alembic/: env.py
utmo/alembic/versions/: 16a9a044eaa2_.py  24bb60cacdc7_.py  d51734556cd7_.py
utmo/core/: __init__.py  adapters.py  config.py  exceptions.py  structures.py
utmo/core/db/: __init__.py  fields.py  functions.py  models.py  processing.py
utmo/core/tools/: __init__.py  di.py  event_manager.py  exceptions.py
