[tool.poetry]
name = "utmo"
version = "0.0.1"
description = ""
authors = ["lightmanLP <liteman1000@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
vk-api = "^11.9.4"
bs4 = "^0.0.1"
youtube_dl = "^2021.5.16"
click = "^8.0.0"
SQLAlchemy = "^1.4.15"
keyring = "^23.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
