[tool.poetry]
name = "utmo"
version = "0.0.1"
description = ""
authors = ["lightmanLP <liteman1000@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lightmanLP/utmo"
repository = "https://github.com/lightmanLP/utmo"
keywords = ["music", "song", "audio", "manager", "organizer"]
build = "build.py"

[tool.poetry.dependencies]
python = "^3.7"
vk-api = "^11.9.4"
bs4 = "^0.0.1"
youtube_dl = "^2021.5.16"
click = "^8.0.0"
click-shell = "^2.0"
keyring = "^23.0.1"
SQLAlchemy = "^1.4.15"
alembic = "^1.6.3"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
typing-extensions = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
utmo-cli = "utmo.cli:cli"
